--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Is this emoji combo Problematic?</title>
+  
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0078ff">
+  
 <style>
   body {
     font-family: "Segoe UI Emoji", Arial, sans-serif;
