--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ const combos = [
   { color: "red", emojis: ["🖤💀","🍪🪦"], desc: "This is the necrophilia emoji combo, its used to represent that the user has a romantic / sexual attraction to the deceased (dead)." },
   { color: "red", emojis: ["🩹❤️‍🩹"], desc: "This is the abuse emoji combo, its used to represent the user supports any type of abuse." },
   { color: "red", emojis: ["🗺️🍕"], desc: "This is the MAP emoji combo, MAP stands for Minor-Attracted-Person (MAA - Minor-Attracted-Adult), its used to represent that the user has a sexual and/or romantic attraction to minors." },
+  { color: "red", emojis: ["🥩🎀"], desc: "This is the Cutegore emoji combo, it is used to express support towards gore (extreme violence) represented in what is seen as cute or kawaii styles." },
 
   // YELLOW (Awareness / survivor)
   { color: "yellow", emojis: ["💔🍬"], desc: "This is the Hypersexual emoji combo, used to represent people who constantly have sexual feelings no matter what and should be supported even when struggling." },
