--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <div id="result"></div>
 <div id="desc">
-  Emoji combos can be signals to other problematic people to find them, be aware! <br> by <a style="text-decoration:none;" rel="le corner" href="https://www.tiktok.com/@le.corner.coder?_t=ZS-90Qhga6uZtK&_r=1">le corner</a> <3
+  Emoji combos can be signals to other problematic people to find them, be aware! <br> by <a style="text-decoration:none;" rel="le corner" href="https://www.tiktok.com/@le.corner.coder?_t=ZS-90Qhga6uZtK&_r=1">le corner</a>
 </div>
 
 <script>
@@ -77,7 +77,7 @@ const combos = [
   { color: "red", emojis: ["🍖🌈","🍓🍰","🌻🪁","🥀🕊️","🪐🌌","🌱☁️","🍋🎀","🥩🍗","💌⛵️","🍥🐾","🐰🌷","🦈💥","🦭🦴","🍟🐾"], desc: "This is the Proshipper emoji combo, it means the user supports every ship including problematic ones." },
   { color: "red", emojis: ["🍋🌈","🎉🖋️","🧊🍭","🎨🍡","🕊️🖌️","🔏🫀","🫀🌙","📝🌸","🪼🫧","🍡🐾","🔏❣️"], desc: "This is the Profiction emoji combo, used to represent the user believes fiction does not affect reality for example, shipping a minor does not affect a minor in real life." },
   { color: "red", emojis: ["🌸🌙","🕊️⚠️","⛸️☁️","🥀🧷","🫧☁️","🍋🕊️","🌈🐾","🦇🎀","🎀🧁","🍥🍓"], desc: "This is the Comship emoji combo, used to represent the user ship complicated ships usually human x monster, therapist x person needing therapy, etc. made for immoral but not necessarilly illegal ships." },
-  { color: "red", emojis: ["🎱🎀","🥨🕯️","🔪💎","🥩🍽️"], desc: "This is the Darkship emoji combo, used to represent the user ships ships that are illegal if real. For example, minor x adult, abuser x victim, pet x owner, etc." },
+  { color: "red", emojis: ["🎱🎀","🥨🕯️","🔪💎","🥩🍽️", "🦴🐾"], desc: "This is the Darkship emoji combo, used to represent the user ships ships that are illegal if real. For example, minor x adult, abuser x victim, pet x owner, etc." },
   { color: "red", emojis: ["📖🖤","☠️❤️","☠️❣️","☠️🌈"], desc: "This is the Darkfiction emoji combo, used to represent the user loves immoral and illegal situations without shipping involved." },
   { color: "red", emojis: ["🧩🥀","🧩🛳️","🧼🧡"], desc: "This is the Ex-anti emoji combo, used to represent the user was once an anti-problematic shipper but is now neutral or problematic." },
   { color: "red", emojis: ["🐜🚫","🐜❌"], desc: "This is the Anti-DNI emoji combo, used to represent people who dislike people who dont like others to interact with them under a certain condition, usually problematic." },
@@ -90,12 +90,14 @@ const combos = [
   { color: "red", emojis: ["⚰️🕊️"], desc: "This is the Dead Dove: Do Not Eat emoji combo, this is used to represent the user supports harsh or extreme topics like gore, rough porn, etc." },
   { color: "red", emojis: ["🩷🍭"], desc: "This is the Minor x Minor emoji combo, this used to represent the user ships a minor with another minor." },
   { color: "red", emojis: ["🔥🍄"], desc: "This is the Abusive Incest emoji combo, its used to represent that the user ships a person with their family member (relative) and any are abusive." },
-  { color: "red", emojis: ["🚪🛍️"], desc: "This is the Incest emoji combo, its used to say the user ships someone by its family member." },
+  { color: "red", emojis: ["🚪🛍️"], desc: "This is the Incest emoji combo, it is used to say the user ships someone by its family member." },
   { color: "red", emojis: ["🖤💀","🍪🪦"], desc: "This is the necrophilia emoji combo, its used to represent that the user has a romantic / sexual attraction to the deceased (dead)." },
   { color: "red", emojis: ["🩹❤️‍🩹"], desc: "This is the abuse emoji combo, its used to represent the user supports any type of abuse." },
   { color: "red", emojis: ["🗺️🍕"], desc: "This is the MAP emoji combo, MAP stands for Minor-Attracted-Person (MAA - Minor-Attracted-Adult), its used to represent that the user has a sexual and/or romantic attraction to minors." },
   { color: "red", emojis: ["🥩🎀"], desc: "This is the Cutegore emoji combo, it is used to express support towards gore (extreme violence) represented in what is seen as cute or kawaii styles." },
-
+  { color: "red", emojis: ["🫀🩸"], desc: "This is the Gore Fan emoji combo, It is used to express that the user supports or does gore. Gore is extreme violence or torture usually related to death, skinning, and other extreme topics related to physical pain." },
+  { color: "red", emojis: ["📚☕️"], desc: "This is the Age GAP emoji combo, It is used to express satisfaction or support towards fictional / non-fiction relationships where all or some of the people involved in the relationship has a gap between their ages for example: a minor x adult, a minor x teenager, a teenager x adult, etc. the age gap can also be any size like 1, 15, or 40." },
+  
   // YELLOW (Awareness / survivor)
   { color: "yellow", emojis: ["💔🍬"], desc: "This is the Hypersexual emoji combo, used to represent people who constantly have sexual feelings no matter what and should be supported even when struggling." },
   { color: "yellow", emojis: ["🩸♾️"], desc: "This is the Suicidal emoji combo, used to represent people who have, might, or will kill themselves. They should be respected and cared for so they do not commit suicide." },
