--- a/index.html
+++ b/index.html
@@ -97,16 +97,17 @@ const combos = [
   { color: "red", emojis: ["🥩🎀"], desc: "This is the Cutegore emoji combo, it is used to express support towards gore (extreme violence) represented in what is seen as cute or kawaii styles." },
   { color: "red", emojis: ["🫀🩸"], desc: "This is the Gore Fan emoji combo, It is used to express that the user supports or does gore. Gore is extreme violence or torture usually related to death, skinning, and other extreme topics related to physical pain." },
   { color: "red", emojis: ["📚☕️"], desc: "This is the Age GAP emoji combo, It is used to express satisfaction or support towards fictional / non-fiction relationships where all or some of the people involved in the relationship has a gap between their ages for example: a minor x adult, a minor x teenager, a teenager x adult, etc. the age gap can also be any size like 1, 15, or 40." },
+  { color: "red", emojis: ["🎀🪽"], desc: "This is the Meowism emoji combo, It is used to express the user has joined or support a cult founded by Meowbahh where she is the deity." },
   
   // YELLOW (Awareness / survivor)
-  { color: "yellow", emojis: ["💔🍬"], desc: "This is the Hypersexual emoji combo, used to represent people who constantly have sexual feelings no matter what and should be supported even when struggling." },
-  { color: "yellow", emojis: ["🩸♾️"], desc: "This is the Suicidal emoji combo, used to represent people who have, might, or will kill themselves. They should be respected and cared for so they do not commit suicide." },
-  { color: "yellow", emojis: ["🧷❤️‍🩹"], desc: "This is the Self-harm healing emoji combo, used to represent people who are recovering when they hurt themselves (and almost commit suicide) due to a lot of reasons and should be respected as they are recovering." },
-  { color: "yellow", emojis: ["⛓️🍦"], desc: "This is the Rape survivor emoji combo, used to represent people who have been raped (sexually abused without consent) and survived. Treat them with care." },
-  { color: "yellow", emojis: ["🍥💤"], desc: "This is the Abuse survivor emoji combo, used to represent people who have survived abuse, please give them respect!" },
-  { color: "yellow", emojis: ["🌈♾️"], desc: "This is the Autistic emoji combo, used to represent people with Autism. Please treat them with care as their brains work differently." },
-  { color: "yellow", emojis: ["🌈🦋"], desc: "This is the ADHD (Attention deficit hyperactivity disorder) and represents people with ADHD, Give respect to them especially if they have inattention, or hyperactivity as it is normal to them." },
-  { color: "yellow", emojis: ["🌈⌛️","🌈⏳"], desc: "This is the OCD (Obsessive compulsive disorder) and is used to represent people with OCD and you must treat them with kindness" }
+  { color: "yellow", emojis: ["💔🍬"], desc: "This is the Hypersexual emoji combo, used to represent people who constantly have sexual feelings no matter what." },
+  { color: "yellow", emojis: ["🩸♾️"], desc: "This is the Suicidal emoji combo, used to represent people who have, might, or will kill themselves." },
+  { color: "yellow", emojis: ["🧷❤️‍🩹"], desc: "This is the Self-harm healing emoji combo, used to represent people who are recovering when they hurt themselves (and almost commit suicide) due to a variety of reasons." },
+  { color: "yellow", emojis: ["⛓️🍦"], desc: "This is the Rape survivor emoji combo, used to represent people who have been raped (sexually abused without consent) and survived." },
+  { color: "yellow", emojis: ["🍥💤"], desc: "This is the Abuse survivor emoji combo, used to represent people who have survived abuse." },
+  { color: "yellow", emojis: ["🌈♾️"], desc: "This is the Autistic emoji combo, used to represent people with Autism." },
+  { color: "yellow", emojis: ["🌈🦋"], desc: "This is the ADHD (Attention deficit hyperactivity disorder) and represents people with ADHD." },
+  { color: "yellow", emojis: ["🌈⌛️","🌈⏳"], desc: "This is the OCD (Obsessive compulsive disorder) and is used to represent people with OCD." }
 ];
 
 function checkCombo() {
