--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ const combos = [
   { color: "red", emojis: ["🫀🩸"], desc: "This is the Gore Fan emoji combo, It is used to express that the user supports or does gore. Gore is extreme violence or torture usually related to death, skinning, and other extreme topics related to physical pain." },
   { color: "red", emojis: ["📚☕️"], desc: "This is the Age GAP emoji combo, It is used to express satisfaction or support towards fictional / non-fiction relationships where all or some of the people involved in the relationship has a gap between their ages for example: a minor x adult, a minor x teenager, a teenager x adult, etc. the age gap can also be any size like 1, 15, or 40." },
   { color: "red", emojis: ["🎀🪽"], desc: "This is the Meowism emoji combo, It is used to express the user has joined or support a cult founded by Meowbahh where she is the deity." },
+  { color: "red", emojis: ["⚡️⚡️"], desc: "This is the Neo-N*zi emoji combo, It is used to express the user is supporting N*zi Germany after A.H. passed away." },
   
   // YELLOW (Awareness / survivor)
   { color: "yellow", emojis: ["💔🍬"], desc: "This is the Hypersexual emoji combo, used to represent people who constantly have sexual feelings no matter what." },
