--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ const combos = [
   { color: "red", emojis: ["⚡️⚡️"], desc: "This is the Neo-N*zi emoji combo, It is used to express the user is supporting N*zi Germany after A.H. passed away." },
   { color: "red", emojis: ["🩸❤️‍🩹"], desc: "This is the Yandere emoji combo, It is used to express the user is a Yandere (meaning they would k*ll someone for whom they love the most)." },
   { color: "red", emojis: ["🫆𖤓"], desc: "This is the Children Of The Waning Star emoji combo, It is used to express the user have or is supporting / joined the Children Of The Waning Star cult." },
+  { color: "red", emojis: ["🌈🍓"], desc: "This is the R*dqueer emoji combo, It is used to express the userhas a s*xual attraction to everything. (literally)" },
   
   // YELLOW (Awareness / survivor)
   { color: "yellow", emojis: ["💔🍬"], desc: "This is the Hypersexual emoji combo, used to represent people who constantly have sexual feelings no matter what." },
